# cg-local-app.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  README.tpl  appveyor.yml  search-index.js  settings.html  source-files.js
.github/workflows/: release.yml
cg_local_app/: all.html  enum.ConnectedMessage.html  enum.ConnectedNotification.html  enum.ErrorKind.html  enum.ListenMessage.html  enum.ServerMessage.html  enum.WorkerMessage.html  enum.WorkerNotification.html  fn.accept_connection.html  fn.deny_connection.html  fn.handle_accept.html  fn.handle_deny.html  fn.main.html  fn.run_accept.html  fn.run_controller.html  fn.spawn_worker.html  index.html  sidebar-items.js  struct.Error.html  struct.Opts.html  struct.State.html  trait.ResultExt.html  type.Result.html
implementors/cg_local_app/: trait.ResultExt.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/error_chain/: trait.ChainedError.js
implementors/paw_raw/: trait.ParseArgs.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
src/: main.rs
src/cg_local_app/: main.rs.html
