[package]
name = "cg-local-app"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
paw = "1"
structopt = { version = "0.3", features = ["paw"] }

futures = "0.3.0"
futures-util = "0.3.0"
async-std = { version = "1", features = ["unstable"] }
async-tungstenite = { version = "0.4", features = ["async-std-runtime"] }
strum = "0.18.0"
strum_macros = "0.18.0"
semaphore = "0.4.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
hotwatch = "0.4"
cursive = { version = "0.14", default-features = false, features = ["crossterm-backend"] }
error-chain = "0.12"
