[package]
name = "cg-local-app"
version = "0.1.2"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2018"
description = "Rust application for CG Local"
documentation = "https://docs.rs/cg-local-app/"
readme = "README.md"
homepage = "https://github.com/alixinne/cg-local-app.rs"
repository = "https://github.com/alixinne/cg-local-app.rs.git"
license = "MIT"
keywords = []
categories = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
env_logger = "0.8"
paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }

futures = "0.3"
futures-util = "0.3"
async-std = { version = "1.9", features = ["unstable"] }
async-tungstenite = { version = "0.13", features = ["async-std-runtime"] }
semaphore = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hotwatch = "0.4"
cursive = { version = "0.16", default-features = false, features = ["crossterm-backend"] }
error-chain = "0.12"
